# prime-bench

./: CMakeLists.txt  main.cpp  performance_os_changes.txt  prime_utils.hpp  test.cpp
Concurrent/: find_primesv2.hpp  find_primesv3.hpp  find_primesv4.hpp  find_primesv7.hpp  find_primesv8.hpp  prime_conc.hpp
Sequential/: find_primesv5.hpp  find_primesv6.hpp  prime_seq.hpp  sieve_of_aktin.hpp  sieve_of_eratosthenes.hpp  sieve_of_euler.hpp  sieve_of_sundaram.hpp
tests/: CMakeLists.txt  test_sieves.cpp  test_utils.hpp
